--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="# F​uture​s​ of Identity, ​Financial innovation​ ​& ​D​ecentralization ​T​echnology   " aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>​F​uture​s​ of Identity, ​Financial innovation​ ​& ​D​ecentralization ​T​echnology
+<p>​
 
 
 ​Interested in design​, UI​, cryptosystems and blockchain integration​? ​Join us ​this Wednesday to identify Web/Blockchain tools and resources that will be useful in prototypying identity/savings/loans on the blockchain. 
@@ -41,7 +41,7 @@ WHERE: Cambridge Innovation Center (CIC), 4th Floor
 <p>
 <h3>
 <a id=
-<p>H
+<p>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/BridgingBanks/BridgingBanks">Bridgingbanks</a> is maintained by <a href="https://github.com/BridgingBanks">BridgingBanks</a>.</span>
 
