--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 ​Interested in design​, UI​, cryptosystems and blockchain integration​? ​Join us ​this Wednesday to identify Web/Blockchain tools and resources that will be useful in prototypying identity/savings/loans on the blockchain. 
 
 </br>
-WHAT: ​Pre-hackathon​ styled event​ Powered By The International Institute of Commerce
+#WHAT: ​Pre-hackathon​ styled event​ Powered By The International Institute of Commerce#
 </br>
-WHEN: Wednesday, September 21 7:00 pm – 9:30 pm  
-
-WHERE: Cambridge Innovation Center (CIC), 4th Floor
+#WHEN: Wednesday, September 21 7:00 pm – 9:30 pm  
+</br>
+#WHERE: Cambridge Innovation Center (CIC), 4th Floor
 </br>
 <h3>
 <a id=
