--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <p>​
 
 
-​Interested in design​, UI​, cryptosystems and blockchain integration​? ​Join us ​this Wednesday to identify Web/Blockchain tools and resources that will be useful in prototypying identity/savings/loans on the blockchain. 
+Interested in design​, UI​, cryptosystems and blockchain integration​? ​Join us ​this Wednesday to identify Web/Blockchain tools and resources that will be useful in prototypying identity/savings/loans on the blockchain. 
 
 </br>
 WHAT: ​Pre-hackathon​ styled event​ Powered By The International Institute of Commerce
