--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@ Interested in design​, UI​, cryptosystems and blockchain integration​?
 </br>
 Join us ​this Wednesday to identify Web/Blockchain tools and resources that will be useful in prototypying identity/savings/loans on the blockchain. 
 </br>
- <b> WHAT: ​Pre-hackathon​ styled event​ Powered By The International Institute of Commerce </b> 
+ <b> WHAT: </b>  ​Pre-hackathon​ styled event​ Powered By The International Institute of Commerce
 </br>
- <b> WHEN: Wednesday, September 21 7:00 pm – 9:30 pm  </b>
+ <b> WHEN: </b>  Wednesday, September 21 7:00 pm – 9:30 pm  
 </br>
-<b>WHERE: Cambridge Innovation Center (CIC), 4th Floor </b>
+<b>WHERE: </b>  Cambridge Innovation Center (CIC), 4th Floor 
 </br>
 <h3>
 <a id=
