--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 <p>​
 
 
-Interested in design​, UI​, cryptosystems and blockchain integration​? 
-</br>
+ <b> Interested in design​, UI​, cryptosystems and blockchain integration​?  </b> 
+ 
+<br>
 Join us ​this Wednesday to identify Web/Blockchain tools and resources that will be useful in prototypying identity/savings/loans on the blockchain. 
 </br>
  <b> WHAT: </b>  ​Pre-hackathon​ styled event​ Powered By The International Institute of Commerce
