--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Join us ​this Wednesday to identify Web/Blockchain tools and resources that wi
 <a id=
 <p>
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/BridgingBanks/BridgingBanks">Bridgingbanks</a> is maintained by <a href="https://github.com/BridgingBanks">BridgingBanks</a>.</span>
+        <span class="site-footer-owner"></span>
 
         <span class="site-footer-credits">  </a>.</span>
       </footer>
