--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Bridgingbanks</h1>
+      <h1 class="project-name">BridgingBanks</h1>
       <h2 class="project-tagline"></h2>
-      <a href="https://github.com/BridgingBanks/BridgingBanks" class="btn">View on GitHub</a>
-      <a href="https://github.com/BridgingBanks/BridgingBanks/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/BridgingBanks/BridgingBanks/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
@@ -30,6 +27,8 @@
 <br>
 Join us ​this Wednesday to identify Web/Blockchain tools and resources that will be useful in prototypying identity/savings/loans on the blockchain. 
 </br>
+
+
  <b> WHAT: </b>  ​Pre-hackathon​ styled event​ Powered By The International Institute of Commerce
 </br>
  <b> WHEN: </b>  Wednesday, September 21 7:00 pm – 9:30 pm  
