--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 <p>​
 
 
- <b> Interested in design​, UI​, cryptosystems and blockchain integration​?  </b> 
+ <b>
+Interested in design​, UI​, cryptosystems and blockchain integration​?  </b> 
  
 <br>
 Join us ​this Wednesday to identify Web/Blockchain tools and resources that will be useful in prototypying identity/savings/loans on the blockchain. 
