--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
       <h3> 
 <a id="welcome-to-github-pages" class="anchor" href=" #F​utures​ of Identity, ​Financial innovation​ ​& ​D​ecentralization ​T​echnology# " aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>F​utures​ of Identity, ​Financial innovation​ ​& ​D​ecentralization ​T​echnology</h3>
 
+
+<p>This is example text.<br>
+<br>
+We added two breaks to create the above space.</p>
 <p>​
-
-
- <b>
-Interested in design​, UI​, cryptosystems and blockchain integration​?  </b> 
- 
+ <b>  <br> 
+Interested in design​, UI​, cryptosystems and blockchain integration​? </p>  
+ <p>
 <br>
 Join us ​this Wednesday to identify Web/Blockchain tools and resources that will be useful in prototypying identity/savings/loans on the blockchain. 
-<br>
+</p>
 
 
  <b> WHAT: </b>  ​Pre-hackathon​ styled event​ Powered By The International Institute of Commerce
