--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <p>​
  <b>  <br> 
-Interested in design​, UI​, cryptosystems and blockchain integration​?  <b> </p>  
+Interested in design​, UI​, cryptosystems and blockchain integration​?  </b> </p>  
  <p>
 <br>
 Join us ​this Wednesday to identify Web/Blockchain tools and resources that will be useful in prototypying identity/savings/loans on the blockchain. 
