--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ Join us ​this Wednesday to identify Web/Blockchain tools and resources that wi
 </br>
 <b>WHERE: </b>  Cambridge Innovation Center (CIC), 4th Floor 
 </br>
-
-Join us on Tuesday, September 21st for the Automated Legal Entity Hack-Night: Pop-Up Startup Loan Fund <link href="http://www.meetup.com/Massachusetts-Legal-Hackers/events/234210006/">
+<br>
+Join us on Tuesday, September 21st for the Automated Legal Entity Hack-Night: Pop-Up Startup Loan Fund <a href="http://www.meetup.com/Massachusetts-Legal-Hackers/events/234210006/"</a>
 <h3>
 <a id=
 <p>
