--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Join us ​this Wednesday to identify Web/Blockchain tools and resources that wi
 <b>WHERE: </b>  Cambridge Innovation Center (CIC), 4th Floor 
 </br>
 <br>
-Join us on Tuesday, September 21st for the Automated Legal Entity Hack-Night: Pop-Up Startup Loan Fund <a href="http://www.meetup.com/Massachusetts-Legal-Hackers/events/234210006/"</a>
+Join us on Tuesday, September 21st for the Automated Legal Entity Hack-Night: Pop-Up Startup Loan Fund <a href="http://www.meetup.com/Massachusetts-Legal-Hackers/events/234210006/"></a></a>
 <h3>
 <a id=
 <p>
